--- a/assets/css/geoContrast.css
+++ b/assets/css/geoContrast.css
@@ -101,6 +101,17 @@ ul li{
 }
 
 
+
+/*...*/
+
+.input-form {
+    background-color:#f2f2f29f;
+    border-radius:10px;
+    padding:20px;
+    margin-top:15px;
+}
+
+
 /*...*/
 
 
@@ -116,7 +127,7 @@ ul li{
     padding: 8px;
 }
 
-#comparison-file-table tr:nth-child(even){background-color: #f2f2f2;}
+#comparison-file-table tr:nth-child(even){background-color: #f2f2f29f;}
 
 #comparison-file-table tr:hover {background-color: #ddd;}
 
