--- a/assets/css/geoContrast.css
+++ b/assets/css/geoContrast.css
@@ -430,3 +430,19 @@ ul li{
     opacity: 0.7;
 }
 
+.upload-button {
+    flex-shrink: 0;
+    width: 30px;
+    height: auto;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    text-align: center;
+    padding: 0;
+    cursor: pointer;
+}
+
+.upload-button-active {
+    background: darkgray;
+    color: white;
+}
+
