--- a/gb5/assets/css/main.css
+++ b/gb5/assets/css/main.css
@@ -2716,3 +2716,24 @@ input, select, textarea {
 		border: 0;
 		border-radius: 0;
 		padding: 0; }
+
+.gridB {
+	background: white;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr 1fr;
+	grid-gap: 3px;
+}
+
+.gridB div {
+	width: 100%;
+	height: 0%;
+	padding-bottom: 1%;
+	background: white;
+	vertical-align: middle;
+}
+
+@media (max-width: 400px) {
+	.gridB {
+		grid-template-columns: 1fr;
+	}
