--- a/gb5/assets/css/main.css
+++ b/gb5/assets/css/main.css
@@ -1941,7 +1941,7 @@ input, select, textarea {
 			background: #F0B323;
 			color: #fff;
 			border-radius: 6px;
-			font-family: 'Roboto', 'Oleo Script', 'Open Sans', serif;
+			font-family: 'Roboto Slab', serif;
 			font-weight: 400;
 			padding: 0.25em 0.2em 0.25em 0.2em;
 			font-size: 3.25em;
